--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,10 @@ body {
     margin-right: 50px;
 }
 
+.menu-item {
+    position: relative;
+}
+
 .menu-link {    
     font-weight: 500;
     font-size: 14px;
@@ -156,6 +160,18 @@ body {
 
 .menu .menu-link.current {
     color: var(--accent-color);
+}
+
+.menu-link.current::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    position: absolute;
+    top: 46px;    
+    background-color: #2196F3;
+    
 }
 
 .page-header-pohne,
@@ -379,6 +395,28 @@ body {
     margin-right: 30px;
 }
 
+.our-works-card {
+    position: relative;
+}
+
+.our-works-overlay {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);    
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;        
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    padding-top: 27px;    
+    
+    color: #FFFFFF;
+}
+
 .works {
     display: flex;
     flex-wrap: wrap;
@@ -449,6 +487,7 @@ address {
     line-height: 1.71;    
     letter-spacing: 0.03em;    
     color: var(--primary-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -457,6 +496,7 @@ address {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: #FFFFFF60;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-footer-phone {
@@ -464,6 +504,7 @@ address {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: #FFFFFF60;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-footer-address:hover,
@@ -570,6 +611,7 @@ address {
     border: 1px solid transparent;
     padding: 6px 22px;
     cursor: pointer;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -604,6 +646,7 @@ address {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+
 }
 
 .project-list-content {
@@ -630,6 +673,41 @@ address {
     letter-spacing: 0.03em;    
     color: var(--secondary-font-color);
 }
+
+.project-list-img-wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
+.project-list-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;      
+    letter-spacing: 0.03em;    
+    color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(33, 150, 243, 0.9);
+    padding: 63px 24px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    /* opacity: 0;
+    visibility: hidden;
+    pointer-events: none; */
+}
+
+.project-list-item-link:hover .project-list-overlay, 
+.project-list-item-link:focus .project-list-overlay  {
+    transform: translateY(0);
+
+}
+
 /* ==============/PORTFOLIO================= */
 
 /* ==============BACKDROP================= */
