--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,19 @@
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     margin-top: 0;
     margin-bottom: 0;
 }
 
-ul, ol {
+ul,
+ol {
     margin-top: 0;
     margin-bottom: 0;
-    padding-left: 0;        
+    padding-left: 0;
 }
 
 img {
@@ -40,9 +47,9 @@ body {
 .container {
     width: 1200px;
     padding-left: 15px;
-    padding-right: 15px;   
+    padding-right: 15px;
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -50,7 +57,7 @@ body {
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
-    
+
 }
 
 .title {
@@ -65,17 +72,18 @@ body {
 }
 
 .visually-hidden {
-   position: absolute;
-   width: 1px;
-   height: 1px;
-   margin: -1px;
-   border: 0;
-   padding: 0;
-   white-space: nowrap;
-   clip-path: inset(100%);
-   clip: rect(0 0 0 0);
-   overflow: hidden;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
+
 /* ===============/COMPONENTS================= */
 
 /* ===============HEADER================= */
@@ -84,8 +92,8 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em;    
-    color: var(--accent-color);    
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
 }
 
 .black {
@@ -93,7 +101,7 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em;    
+    letter-spacing: 0.03em;
     color: #000000;
 }
 
@@ -124,7 +132,7 @@ body {
 }
 
 .contact-header {
-    display: flex;    
+    display: flex;
     margin-left: auto;
 }
 
@@ -144,7 +152,7 @@ body {
     position: relative;
 }
 
-.menu-link {    
+.menu-link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -169,9 +177,9 @@ body {
     height: 4px;
     border-radius: 2px;
     position: absolute;
-    top: 46px;    
+    top: 46px;
     background-color: #2196F3;
-    
+
 }
 
 .page-header-pohne,
@@ -213,27 +221,26 @@ body {
     padding: 10px 32px;
     min-width: 200px;
     border: 1px solid transparent;
-    border-radius: 4px;    
-            
+    border-radius: 4px;
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.06em;
-    background-color: var(--accent-color);    
+    background-color: var(--accent-color);
     color: var(--primary-color);
     text-align: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    cursor: pointer;      
+    cursor: pointer;
 }
 
 .hero {
     height: 600px;
     max-width: 1600px;
-    background-image: linear-gradient( 
-        to right, 
-        rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ),
-        url("../images/hero-Img.jpg");    
+    background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url("../images/hero-Img.jpg");
     background-color: var(--main-background-color);
     background-size: cover;
     background-repeat: no-repeat;
@@ -264,6 +271,7 @@ body {
 .modal-btn:focus {
     background-color: #188CE8;
 }
+
 /* ================/HERO=================== */
 
 /* ==============BENEFITS================= */
@@ -273,22 +281,22 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    text-transform: uppercase;    
+    text-transform: uppercase;
     color: var(--primary-font-color);
     margin-bottom: 10px;
     margin-top: 30px;
 }
 
-.benefit-description  {
+.benefit-description {
     font-size: 14px;
-    line-height: 1.71;    
-    letter-spacing: 0.03em;    
+    line-height: 1.71;
+    letter-spacing: 0.03em;
     color: var(--secondary-font-color);
 }
 
 .benefit-list {
     display: flex;
-} 
+}
 
 .benefit-list-item:not(:last-child) {
     margin-right: 30px;
@@ -303,15 +311,16 @@ body {
     border-radius: 4px;
     background-color: #F5F4FA;
 }
+
 /* ==============/BENEFITS================= */
 
 /* ==============OUR TEAM================= */
 .our-team-title {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.19;    
+    line-height: 1.19;
     text-align: center;
-    letter-spacing: 0.03em;    
+    letter-spacing: 0.03em;
     color: var(--primary-font-color);
 
     margin-bottom: 10px;
@@ -324,9 +333,9 @@ body {
 
 .our-team-description {
     font-size: 16px;
-    line-height: 1.19;    
+    line-height: 1.19;
     text-align: center;
-    letter-spacing: 0.03em;    
+    letter-spacing: 0.03em;
     color: var(--secondary-font-color);
     margin-bottom: 16px;
 }
@@ -338,8 +347,8 @@ body {
 .our-team-card {
     background-color: var(--primary-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
 
@@ -365,7 +374,7 @@ body {
     height: 44px;
     border-radius: 50%;
     fill: #AFB1B8;
-    background-color: var(--primary-color);  
+    background-color: var(--primary-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -376,13 +385,14 @@ body {
 .social-list-item-link:hover .social-list-icon,
 .social-list-item-link:focus .social-list-icon {
     fill: var(--primary-color);
-        
+
 }
 
-.social-list-item-link:hover ,
+.social-list-item-link:hover,
 .social-list-item-link:focus {
     background-color: var(--accent-color);
 }
+
 /* =============/OUR TEAM=============== */
 
 /* =============OUR WORKS=============== */
@@ -404,16 +414,16 @@ body {
     bottom: 0;
     width: 100%;
     height: 70px;
-    background-color: rgba(47, 48, 58, 0.8);    
+    background-color: rgba(47, 48, 58, 0.8);
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.14;        
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     display: flex;
     justify-content: center;
-    padding-top: 27px;    
-    
+    padding-top: 27px;
+
     color: #FFFFFF;
 }
 
@@ -436,7 +446,7 @@ body {
 
 .castomers-list-item {
     width: 170px;
-    height: 92px;    
+    height: 92px;
 }
 
 .castomers-list-item-link {
@@ -444,7 +454,7 @@ body {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;    
+    height: 100%;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     fill: #AFB1B8;
@@ -458,7 +468,7 @@ body {
 
 .castomers-list-item-link:hover .castomers-list-icon,
 .castomers-list-item-link:focus .castomers-list-icon {
-    fill: #2196F3;    
+    fill: #2196F3;
 }
 
 .castomers-list-item-link:hover,
@@ -482,16 +492,16 @@ address {
     padding-bottom: 60px;
 }
 
-.contact-footer-address {    
+.contact-footer-address {
     font-size: 14px;
-    line-height: 1.71;    
-    letter-spacing: 0.03em;    
+    line-height: 1.71;
+    letter-spacing: 0.03em;
     color: var(--primary-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+
 }
 
-.contact-footer-mail {        
+.contact-footer-mail {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -526,9 +536,9 @@ address {
 }
 
 .footer-container {
-    display: flex;  
+    display: flex;
     align-items: baseline;
-    
+
 }
 
 .footer-leftside {
@@ -599,20 +609,20 @@ address {
     margin-right: 8px;
 }
 
-.nav-button {  
+.nav-button {
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.63;    
-    letter-spacing: 0.03em; 
+    line-height: 1.63;
+    letter-spacing: 0.03em;
     background-color: #F5F4FA;
     color: var(--primary-font-color);
     border-radius: 4px;
     border: 1px solid transparent;
     padding: 6px 22px;
     cursor: pointer;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .nav-button:hover,
@@ -620,8 +630,8 @@ address {
     color: var(--primary-color);
     background-color: var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-    0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
 
@@ -637,15 +647,16 @@ address {
 .project-list-item:nth-child(-n+6) {
     margin-bottom: 30px;
 }
+
 .project-list-item-link {
     display: block;
 }
 
 .project-list-item-link:hover,
-.project-list-item-link:focus{
+.project-list-item-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
 
 }
 
@@ -661,16 +672,16 @@ address {
 .project-title {
     font-weight: 700;
     font-size: 18px;
-    line-height: 2.0;    
-    letter-spacing: 0.06em;    
+    line-height: 2.0;
+    letter-spacing: 0.06em;
     color: var(--primary-font-color);
     margin-bottom: 4px;
 }
 
-.project-description {    
+.project-description {
     font-size: 16px;
-    line-height: 1.87;    
-    letter-spacing: 0.03em;    
+    line-height: 1.87;
+    letter-spacing: 0.03em;
     color: var(--secondary-font-color);
 }
 
@@ -689,17 +700,17 @@ address {
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 1.56;      
-    letter-spacing: 0.03em;    
+    line-height: 1.56;
+    letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.9);
     background-color: rgba(33, 150, 243, 0.9);
     padding: 63px 24px;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);    
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-list-item-link:hover .project-list-overlay, 
-.project-list-item-link:focus .project-list-overlay  {
+.project-list-item-link:hover .project-list-overlay,
+.project-list-item-link:focus .project-list-overlay {
     transform: translateY(0);
 
 }
@@ -715,7 +726,7 @@ address {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
 
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
@@ -733,8 +744,8 @@ address {
     height: 581px;
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 }
 
