--- a/css/styles.css
+++ b/css/styles.css
@@ -421,8 +421,8 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     display: flex;
-    justify-content: center;
-    padding-top: 27px;
+    align-items: center;
+    justify-content: center;    
 
     color: #FFFFFF;
 }
@@ -621,7 +621,7 @@ address {
     border: 1px solid transparent;
     padding: 6px 22px;
     cursor: pointer;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -650,6 +650,8 @@ address {
 
 .project-list-item-link {
     display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .project-list-item-link:hover,
